got the styling close to the example. I was not able to match it perfectly, but I am going to move on with the exercises anyway to prevent getting stuck on a trivial detail

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    border: 2px solid white;
-    padding: 20px;
+    border: 4px solid white;
+    padding: 5px;
     margin: 60px;
     align-items: center;
     justify-content: center;
@@ -22,13 +22,23 @@
 }
 
 ul {
-    
     list-style: none;
-    
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    margin: 5px;
+    justify-content: center;
+    height: auto;
+    width: 451.267px;
 }
 
 li {
     background-color: white;
     display: flex;
+    margin: 2px;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+    
     
 }
